<resources>
    <string name="app_name">Mr Fever</string>
    <string name="introduction">Hello! I am Mr Fever.</string>
    <string name="greeting">Welcome to my app!</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register new user</string>
    <string name="user_created">User was created.</string>
    <string name="can_sign_in">You can now sign in.</string>
    <string name="go_sign_in">go to sign in</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="mrfever_logo">Mr Fever\'s logo</string>
    <string name="doctor_logo">Doctor\'s logo</string>
    <string name="send_forgot_pass">Send password reset email</string>
    <string name="pills_panel">Pills panel</string>
    <string name="hi">Hi, </string>
    <string name="menu_button">Menu button </string>
    <string name="children">Children profiles</string>
    <string name="doctors">Doctors\' appointments\' diary</string>
    <string name="medicines">Medicines</string>
    <string name="profile">User profile</string>
    <string name="child_logo">Child\'s logo</string>
    <string name="add_child">Add a child profile</string>
    <string name="your_children">Your children</string>
    <string name="your_children_are">Your children are:</string>
    <string name="your_children_empty">You do not have any children\' profiles created yet.</string>
    <string name="child_name">Child\'s name</string>
    <string name="child_birthday">Child\'s date of birth</string>
    <string name="child_sex">Child\'s sex:</string>
    <string name="child_blood_type">Child\'s blood type</string>
    <string name="create_child_profile">Create child\'s profile</string>
    <string name="chp_birthday">Date of birthday:</string>
    <string name="chp_bloodtype">Blood type:</string>
    <string name="chp_last_doc_app">Last doctor\'s appointment:</string>
    <string name="chp_last_med">Last medicine given:</string>
    <string name="add_med">Add medicine\'s dose:</string>
    <string name="add_doc_app">Add doctor\'s appointment</string>
    <string name="avatar">Avatar</string>
    <string name="doctor_name">Doctor\'s name</string>
    <string name="doc_spec">Specialization</string>
    <string name="doc_app_date">Date of appointment:</string>
    <string name="hour">Hour:</string>
    <string name="doc_rec">Doctor\'s recommendations:</string>
    <string name="presc_med">Prescribed medicines:</string>
    <string name="next_app">Next appointment:</string>
    <string name="email_error">Your e-mail is invalid.</string>
    <string name="password_error">Your password is too short. It\'s length has to be minimum 6 characters.</string>
</resources>